<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:inputType="textEmailAddress" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEmail"
        android:layout_marginTop="18dp"
        android:text="@string/UserPassword"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPassword"
        android:text="@string/LogIn"
        android:layout_alignRight="@+id/editTextPassword"
        android:layout_alignEnd="@+id/editTextPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSignUp"

        android:text="@string/Want_sign_up"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#1a39bf"
        android:textStyle="normal" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="58dp"
        android:text="@string/SignUp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GoHome"
        android:id="@+id/buttonGoToHome"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="0.19"
        android:layout_gravity="center_horizontal" />


</LinearLayout>