<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="872dp"
        android:gravity="fill"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".SignUp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/UserName"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/TextUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/radioGroupGender"
            android:layout_toRightOf="@+id/radioGroupGender"
            android:ems="10"
            android:inputType="textPersonName">

            <requestFocus />
        </EditText>


        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/TextUserName"
            android:layout_marginTop="10dp"
            android:text="@string/Email"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTextmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/TextUserName"
            android:layout_alignStart="@+id/TextUserName"
            android:layout_alignTop="@+id/textView1"
            android:ems="10"
            android:inputType="textEmailAddress" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="40dp"
            android:text="@string/UserPassword"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTextpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView3"
            android:layout_toEndOf="@+id/radioGroupGender"
            android:layout_toRightOf="@+id/radioGroupGender"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="41dp"
            android:text="@string/TwitterAccount"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTextTwitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView4"
            android:layout_alignLeft="@+id/editTextpassword"
            android:layout_alignStart="@+id/editTextpassword"
            android:ems="10" />


        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextTwitter"
            android:layout_alignStart="@+id/editTextTwitter"
            android:layout_alignTop="@+id/textView6"
            android:ems="10" />

        <TextView
            android:id="@+id/textViewBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="38dp"
            android:ems="10" />

        <Button
            android:id="@+id/btnBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView7"
            android:text="Set Birth Date" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignUp"
            android:layout_below="@+id/radioGroupGender"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="41dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:text="@string/City"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@+id/textView4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editTextCity"
            android:layout_marginTop="65dp"
            android:text="@string/BirthDate"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewBirthDate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="43dp">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="149dp"
                android:layout_height="59dp"
                android:checked="true"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="149dp"
                android:layout_height="59dp"
                android:checked="true"
                android:text="@string/female" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/radioGroupGender"
            android:layout_marginTop="45dp"
            android:layout_toLeftOf="@+id/radioGroupGender"
            android:text="@string/gender"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>

</ScrollView>